# scaffold-ai

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: debug.py  file_structure.py  generate.py  prompt.py
backend/app/core/: database.py  logger.py  settings.py
backend/app/models/: file_structure.py  node.py  prompt.py  schema.py
backend/app/services/: llm.py
backend/app/utils/: tree_parser.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/api/: config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: HowItWorks.tsx  KeyFeatures.tsx  Navbar.tsx  Notification.tsx  Orbs.tsx  SupportedTechnologies.tsx  TemplateCard.tsx  background.tsx  blob.tsx  hero.tsx
frontend/src/app/elements/: hero.tsx
frontend/src/app/prompt-display/: CodeViewer.tsx  ContextMenu.tsx  FileTree.tsx  mockData.ts  page.tsx
frontend/src/app/templates/: mock-data.ts  page.tsx
frontend/src/types/: index.ts
